--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,9 +1,9 @@
-- name: Deploy containerized Python app to EC2
+- name: Deploy containerized Ansible-Python app to EC2
   hosts: webserver
   become: yes
 
   vars:
-    container_name: python-webapp
+    container_name: ansible-app
     docker_image: "{{ docker_image | default('soumyasekhardey/ansible-app:latest') }}"
 
   tasks:
