--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -4,7 +4,7 @@
 
   vars:
     container_name: ansible-app
-    docker_image: "{{ docker_image | default('soumyasekhardey/ansible-app:latest') }}"
+    docker_image: "{{ docker_image }}"
 
   tasks:
   - name: Install Docker
